# gridtokenx-iam-service

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  QWEN.md  README.md  build.rs  skill.md  start.sh  test_output.txt
crates/iam-api/: Cargo.toml
crates/iam-api/src/: error_helpers.rs  handlers.rs  identity_grpc.rs  identity_grpc_tests.rs  lib.rs  middleware.rs
crates/iam-api/src/handlers/: auth.rs  identity.rs  system.rs  types.rs
crates/iam-api/src/handlers/auth/: auth_tests.rs
crates/iam-api/src/middleware/: metrics.rs  rate_limit.rs  request_id.rs
crates/iam-core/: Cargo.toml
crates/iam-core/src/: config.rs  domain.rs  error.rs  lib.rs  traits.rs
crates/iam-core/src/domain/: identity.rs
crates/iam-core/src/domain/identity/: auth.rs  events.rs  keys.rs  models.rs  roles.rs
crates/iam-core/src/error/: codes.rs  types.rs
crates/iam-logic/: Cargo.toml
crates/iam-logic/src/: auth_service.rs  auth_service_tests.rs  blockchain_provider.rs  jwt_service.rs  lib.rs  password.rs
crates/iam-persistence/: Cargo.toml
crates/iam-persistence/migrations/: 20241101000001_initial_schema.sql  20241102000002_add_email_verification.sql  20241114000003_schema_fixes.sql  20241118000004_add_missing_tables.sql  20241118100002_add_blockchain_tx_signature.sql  20241118120001_simplify_user_roles.sql  20241126000001_add_prosumer_consumer_roles.sql  20241126000003_add_blockchain_events.sql  20241128000003_autovacuum_tuning.sql  20251130000000_create_amm_tables.sql  20251203000002_add_corporate_role.sql  20251203000003_convert_user_role_to_enum.sql  20251206000001_add_encrypted_wallet.sql  20251206000008_convert_wallet_columns_to_bytea.sql  20251206000009_add_settlement_order_ids.sql  20251207000001_add_order_pda.sql  20251207000002_create_order_type_enum.sql  20251214000000_add_futures_tables.sql  20251214100000_add_p2p_tables.sql  20251220000003_expand_settlement_tx_hash.sql  20251221000001_create_meters_table.sql  20251231000001_add_p2p_zone_costs.sql  20260104000002_add_wallet_sessions.sql  20260105000002_financial_hardening.sql  20260105000003_platform_revenue.sql  20260105000004_automated_rec_link.sql  20260108070356_add_conditional_orders.sql  20260108072409_add_notifications.sql  20260108193340_add_price_alerts.sql  20260108200337_add_user_wallets.sql  20260109000001_add_session_token_to_orders.sql  20260109000002_add_session_token_to_settlements.sql  20260221000002_add_order_relay_columns.sql  20260222000001_add_p2p_config_table.sql  20260226000001_add_sms_and_push_tokens.sql  20260227000001_enhance_settlements_and_alerts.sql  20260227000002_add_is_confidential_to_orders.sql  20260227000003_add_telemetry_to_readings.sql  20260305013407_add_dynamic_price_boundaries.sql  20260307000001_add_additional_performance_indexes.sql  (+9 more)
crates/iam-persistence/src/: cache.rs  email.rs  event_bus.rs  lib.rs  outbox_worker.rs  repository.rs
crates/iam-persistence/src/event_bus/: kafka.rs  rabbitmq.rs
crates/iam-persistence/src/repository/: api_key.rs  outbox.rs  tests.rs  user.rs  wallet.rs
crates/iam-protocol/: Cargo.toml  build.rs
crates/iam-protocol/proto/: identity.proto
crates/iam-protocol/src/: lib.rs
crates/iam-server/: Cargo.toml
docs/: ARCHITECTURE_AND_DATA_FLOW.md
migrations/: 20241118000005_add_mint_tx_signature.sql  20241118000006_fix_schema_mismatches.sql  20241118000007_add_final_columns.sql  20241118000008_add_issuer_wallet.sql  20241118100001_convert_to_enums.sql  20241118120002_create_epoch_status_enum.sql  20241119000001_add_meter_verification.sql  20241119000002_add_settlement_retry.sql  20241119000003_add_blockchain_registered_column.sql  20241119000004_add_missing_tables.sql  20241120000001_add_minting_retry_queue.sql  20241123000001_add_transaction_tracking.sql  20241126000002_fix_meter_serial_nullable.sql  20241128000001_partition_meter_readings.sql  20241128000002_partition_blockchain_events.sql  20241128000004_add_performance_indexes.sql  20241128000005_partition_time_series_tables.sql  20241128000006_create_archive_tables.sql  20251203000001_add_meter_public_key.sql  20251206000004_add_encrypted_wallet_columns.sql  20251206000005_wallet_audit_log.sql  20251206000006_wallet_export_rate_limit.sql  20251206000007_key_version_tracking.sql  20251213235705_add_filled_at_column.sql  20251220000001_add_password_reset.sql  20251220000002_clear_old_passwords.sql  20251227000001_add_meter_coordinates.sql  20251227000002_add_meter_readings_telemetry.sql  20260104000001_add_grid_status_history.sql  20260105000001_add_meter_zones.sql  20260108071706_add_recurring_orders.sql  20260108204628_add_carbon_credits.sql  20260110000001_add_zone_data_to_grid_history.sql  20260220000000_add_erc_transfer_to_settlements.sql  20260221000001_add_order_peak_price.sql  20260303000001_add_zone_id_to_matches.sql  20260305000001_add_vpp_tables.sql  20260312000001_add_settlement_backoff.sql  20260323232220_add_zone_id_to_meter_readings.sql  20260330000001_add_imbalance_settlement_fields.sql  (+12 more)
proto/: identity.proto
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/api/: identity_grpc.rs  mod.rs
src/core/: config.rs  error.rs
src/infra/: mod.rs
tests/: account_lockout_e2e.sh  api-ref.md  api_all_test.sh  api_test.sh  auth_flow_test.sh  auth_refresh_e2e.sh  email_verify_cycle_e2e.sh  grpc_authorize_e2e.sh  grpc_get_user_info_e2e.sh  grpc_rbac_e2e.sh  grpc_register_user_e2e.sh  grpc_verify_api_key_e2e.sh  grpc_verify_token_e2e.sh  grpc_wallet_link_resolve_e2e.sh  health_live_e2e.sh  health_ready_degraded_e2e.sh  iam_service_test.sh  jwt_tamper_e2e.sh  kafka_dual_write_skip_e2e.sh  load_register.sh  login_claims_e2e.sh  me_rbac_isolation_e2e.sh  me_registration_e2e.sh  metrics_scrape_e2e.sh  monitoring_test.sh  ops_ip_restriction_e2e.sh  outbox_kafka_delivery_e2e.sh  password_reset_cycle_e2e.sh  rate_limit_e2e.sh  register_users_by_type.sh  registration_idempotency_e2e.sh  resend_cooldown_e2e.sh  resend_enumeration_e2e.sh  run_all_e2e.sh  wallet_patch_negative_e2e.sh  wallet_primary_e2e.sh  wallet_provision_e2e.sh  wallet_unlink_e2e.sh
(+15 files in other folders)
