[workspace]
resolver = "2"
members = [
    "crates/iam-core",
    "crates/iam-protocol",
    "crates/iam-persistence",
    "crates/iam-logic",
    "crates/iam-api",
    "crates/iam-server",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.dependencies]
# Internal Crates
iam-core = { path = "crates/iam-core" }
iam-protocol = { path = "crates/iam-protocol" }
iam-persistence = { path = "crates/iam-persistence" }
iam-logic = { path = "crates/iam-logic" }
iam-api = { path = "crates/iam-api" }

# External Dependencies
axum = { version = "0.8.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6.7", features = ["cors", "trace", "timeout"] }

tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
    "sync",
    "signal",
    "parking_lot",
] }
futures = "0.3"

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "migrate",
    "macros",
] }

redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
rdkafka = { version = "0.37", features = ["zstd"] }
lapin = "2.5"
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonwebtoken = { version = "10.0", features = ["use_pem", "rust_crypto"] }
bcrypt = "0.17"
argon2 = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
regex = "1.10"

utoipa = { version = "5.0", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "decimal",
] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
config = "0.15.19"
dotenvy = "0.15"
solana-sdk = "2.1.0"
sha2 = "0.10"
rand = "0.8"
bs58 = "0.5"
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "builder",
] }
rustls = { version = "0.23", features = ["ring"] }
gridtokenx-blockchain-core = { path = "../gridtokenx-blockchain-core" }

connectrpc = { version = "0.2.1", features = ["axum", "server", "client"] }
buffa = "0.2.0"
http-body = "1.0.0"
http = "1.0.0"
tokio-util = "0.7.18"
rust_decimal = { version = "1.36.0", features = ["serde-float", "maths"] }

# Build dependencies
buffa-build = "0.2.0"
connectrpc-build = "0.2.0"
