[package]
name = "iam-api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
iam-core.workspace = true
iam-logic.workspace = true
iam-protocol.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
connectrpc.workspace = true
buffa.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
utoipa.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
gridtokenx-blockchain-core = { workspace = true, features = ["mocks"] }
async-trait.workspace = true

[dev-dependencies]
iam-core = { workspace = true, features = ["mocks"] }
axum-test.workspace = true
mockall.workspace = true
rstest.workspace = true
tokio-test.workspace = true
tower.workspace = true
http.workspace = true
serde_json.workspace = true
bytes = "1.11.1"
http-body-util = "0.1.3"
bcrypt.workspace = true
