[package]
name = "iam-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
axum.workspace = true
utoipa.workspace = true
dotenvy.workspace = true
config.workspace = true
sqlx.workspace = true
sha2.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
