[package]
name = "iam-persistence"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
iam-core.workspace = true
async-trait.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
rdkafka.workspace = true
lapin.workspace = true
lettre.workspace = true

[dev-dependencies]
sqlx = { workspace = true, features = ["migrate"] }
rstest.workspace = true
tokio-test.workspace = true
